<resources>
    <string name="app_name">Music Player</string>
    <string name="shuffle_btn">Shuffle</string>
    <string name="favourite_btn">Favourite</string>
    <string name="playlist_btn">Playlist</string>
    <string name="total_songs">Totals Songs</string>
    <string name="music_never_die">Music never die</string>
    <string name="song_name">Song name</string>
    <string name="back_icon_description">Description</string>
    <string name="favourite_description">Favourite</string>
    <string name="start_music">00:00</string>
    <string name="end_music">Loading</string>
    <string name="repeat_btn">Repeat</string>
    <string name="timer_btn">Timer</string>
    <string name="share_btn">Share</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="app_icon">Icon</string>
    <string name="text_nav">Welcome to world of Music</string>
    <string name="login">Login</string>
    <string name="feedback">Feedback</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="song_album">Song Album</string>
    <string name="search_view">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next_btn_np">Next button now playing</string>
    <string name="play_pause_btn_np">Play pause button now playing</string>
    <string name="song_img">Song Image</string>
    <string name="playlist_name">Playlist name</string>
    <string name="delete">Delete</string>
    <string name="user_name">Your name</string>
    <string name="add">Add</string>
    <string name="delete_all">Delete all</string>
    <string name="search_song">Search song</string>
    <string name="topic_feedback">Topic</string>
    <string name="send_feedback">Send</string>
</resources>