<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".NowPlaying"
    android:background="@color/cool_pink">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/songImgNP"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        android:src="@drawable/app_music_player_slash_screen"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/nextBtnNP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/next_btn_np"
        app:iconSize="40dp"
        app:icon="@drawable/next_icon"
        app:iconTint="@color/white"
        android:backgroundTint="@color/cool_pink"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/playPauseBtnNP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:contentDescription="@string/play_pause_btn_np"
        app:iconSize="40dp"
        app:icon="@drawable/play_icon"
        app:iconTint="@color/white"
        android:backgroundTint="@color/cool_pink"
        android:layout_toStartOf="@id/nextBtnNP"
        android:layout_marginHorizontal="5dp"/>

    <TextView
        android:id="@+id/songNameNP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_centerVertical="true"
        android:textSize="17dp"
        android:textColor="@color/white"
        android:layout_toStartOf="@id/playPauseBtnNP"
        android:text="@string/song_name"
        android:ellipsize="end"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"/>

</RelativeLayout>